[gd_scene load_steps=2 format=2]

[ext_resource path="res://RaptorRender/GUI/SortableTable/SortableTableRow.gd" type="Script" id=1]

[node name="SortabelTableRow" type="MarginContainer"]
margin_top = 24.0
margin_right = 1276.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 1 )

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 1276.0
margin_bottom = 30.0
mouse_filter = 2
color = Color( 0.273529, 0.273529, 0.273529, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1276.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
[connection signal="gui_input" from="." to="." method="_on_SortabelTableRow_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_SortabelTableRow_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SortabelTableRow_mouse_exited"]
